@@ -223,10 +223,8 @@ static void *keyboard_watch_thread(void *lcdlist){
 static void *lcd_draw_thread(void *lcdlist){
 
     g15daemon_t *masterlist = (g15daemon_t*)(lcdlist);
-    static unsigned int lastscreentime;
     /* unsigned int fps = 0; */
     lcd_t *displaying = masterlist->tail->lcd;
-    char *lastdisplayed=NULL;
     memset(displaying->buf,0,1024);
     
     g15daemon_sleep(2);
@@ -244,13 +242,9 @@ static void *lcd_draw_thread(void *lcdlist){
         /* if the current screen is less than 20ms from the previous (equivelant to 50fps) delay it */
         /* this allows a real-world fps of 40fps with no almost frame loss and reduces peak usb bus-load */
                         
-        if((g15daemon_gettime_ms() - lastscreentime)>=20||(char*)displaying!=lastdisplayed){  
-            g15daemon_log(LOG_DEBUG,"Updating LCD");        
-            uf_write_buf_to_g15(displaying);
-            lastscreentime = g15daemon_gettime_ms();
-            lastdisplayed = (char*)displaying;
-            g15daemon_log(LOG_DEBUG,"LCD Update Complete");
-        }
+        g15daemon_log(LOG_DEBUG,"Updating LCD");        
+        uf_write_buf_to_g15(displaying);
+        g15daemon_log(LOG_DEBUG,"LCD Update Complete");
         
         if(displaying->state_changed){
             pthread_mutex_lock(&g15lib_mutex);
